Fix align-center images from shrinking

--- a/css/style.css
+++ b/css/style.css
@@ -7530,8 +7530,6 @@ figure {
 .align-center img {
   margin-left: auto;
   margin-right: auto;
-  max-width: 100%;
-  height: auto;
 }
 
 figure.align-left {
