--- a/scss/_drupal-bootstrap.scss
+++ b/scss/_drupal-bootstrap.scss
@@ -87,8 +87,6 @@ figure {
   img {
     margin-left: auto;
     margin-right: auto;
-    max-width: 100%;
-    height: auto;
   }
 }
 
